about_classes issue fix Require Dog7 to need to_s implementation on  test_to_s_provides_a_string_version_of_the_object Style fix - make input outside koans visible Indicate in title we are using Ruby 1.8.7

--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,12 @@ h1 {
   padding-top   : 24px;
   color: #e70800;
 }
-h1 span {
+h1 span.version {
+  color          : #444;
+  font-size      : 12px;
+  letter-spacing : 3px;
+}
+h1 span.with {
   display        : block;
   margin         : 10px 0 0 0;
   color          : #444;
@@ -67,8 +72,12 @@ h1 span {
 .koans input{
   font-family: monospace;
   font-size: 1em;
-  border: 0;
   padding: 0.2em;
+}
+
+.koans .passed input,
+.koans .failed input {
+  border: 0;
   background-color: rgba(255,255,255, 0.6);
   border-bottom: 1px solid rgba(255,255,255 , 0.8);
 }
